# python-manage2

./: README.rst  requirements.txt  setup.cfg
examples/: activate_license.py  expire_license.py  list_licenses.py  retrieve_license.py
manage2/: __init__.py
manage2/resources/: __init__.py
