[metadata]
name = python-manage2
summary = Client library for cPanel Manage2 API
description-file =
    README.rst
license = Apache License, Version 2.0
author = VEXXHOST, Inc.
author-email = support@vexxhost.com
home-page = https://github.com/vexxhost/
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.3

[files]
packages =
    manage2